--- a/package.json
+++ b/package.json
@@ -1,37 +1,64 @@
 {
-  "name": "vue2-webpack-engineering",
+  "name": "polestar-ui",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A components Library based on Vue2",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xinyang424/polestar-ui"
+  },
+  "homepage": "https://github.com/xinyang424/polestar-ui",
+  "main": "./lib/polestar-ui.common.js",
+  "files": [
+    "lib",
+    "packages"
+  ],
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack"
+    "build": "cross-env NODE_ENV=production webpack",
+    "build:lib": "webpack --config webpack.config.build.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "vue2",
+    "components",
+    "ui"
+  ],
+  "author": "xinyang424",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.25.0",
+    "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^11.1.0",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
-    "file-loader": "^6.2.0",
+    "element-ui": "^2.15.14",
     "html-webpack-plugin": "^5.6.0",
+    "image-minimizer-webpack-plugin": "^4.1.0",
+    "imagemin": "^9.0.0",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-pngquant": "^10.0.0",
+    "imagemin-svgo": "^11.0.1",
     "mini-css-extract-plugin": "^2.9.0",
+    "postcss-loader": "^8.1.1",
+    "postcss-modules": "^6.0.0",
+    "postcss-preset-env": "^9.6.0",
     "progress-bar-webpack-plugin": "^2.1.0",
     "sass": "^1.77.8",
-    "sass-loader": "^14.2.1",
+    "sass-loader": "^15.0.0",
     "style-loader": "^4.0.0",
-    "url-loader": "^4.1.1",
+    "terser-webpack-plugin": "^5.3.10",
+    "vue": "^2.7.16",
     "vue-loader": "^15.11.1",
     "vue-template-compiler": "^2.7.16",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   },
-  "dependencies": {
-    "compression-webpack-plugin": "^11.1.0",
-    "element-ui": "^2.15.14",
-    "vue": "^2.7.16",
-    "vue-router": "^3.6.5"
-  }
+  "engines": {
+    "node": ">= 18.0.0"
+  },
+  "engineStrict": true
 }
